--- a/view/frontend/templates/form/field/checkbox.phtml
+++ b/view/frontend/templates/form/field/checkbox.phtml
@@ -4,17 +4,22 @@
  * http://www.alekseon.com/
  */
 ?>
-<div class="field">
+<div class="field <?= $block->isRequired() ? 'required' : '' ?>">
+    <?php if ($block->displayLabel()): ?>
+        <label class="label" for="<?= $block->getId() ?>"><?= $block->getLabel() ?></label>
+    <?php endif ?>
     <div class="control">
-        <input
-            type="checkbox"
-            name="<?= $block->getName() ?>"
-            id="<?= $block->getId() . '-checkbox' ?>"
-            value="<?= $block->getValue() ?>"
-            <?= $block->isRequired() ? 'data-validate="{required:true}"' : '' ?>
-        >
-            <label for="<?= $block->getId() . '-checkbox' ?>"><?= $block->getLabel() ?></label>
-        </input>
+        <?php foreach ($block->getOptions() as $optionId => $optionLabel): ?>
+            <input
+                type="checkbox"
+                name="<?= $block->getName() ?>[]"
+                id="<?= $block->getId() . '-option-' . $optionId ?>"
+                value="<?= $optionId ?>"
+                data-validate=<?= $block->getDataValidateJson() ?>
+            >
+            <label for="<?= $block->getId() . '-option-' . $optionId ?>"><?= $optionLabel ?></label>
+            </input>
+        <?php endforeach; ?>
     </div>
     <?php if ($note = $block->getNote()): ?>
         <p id="<?= $block->getId() ?>_note" class="note"><?= $note ?></p>
