--- a/view/frontend/templates/widget_form.phtml
+++ b/view/frontend/templates/widget_form.phtml
@@ -5,7 +5,7 @@
  */
 ?>
 <?php if ($block->getForm()): ?>
-    <div id="widget-form-wrapper-<?= $block->getForm()->getId() ?>"
+    <div class="alekseon-widget-form-wrapper" id="widget-form-wrapper-<?= $block->getForm()->getId() ?>"
          data-bind="scope: 'widgetForm-<?= $block->getForm()->getId() ?>'">
          <!-- ko template: getTemplate() --><!-- /ko -->
     </div>
