[FIX] Failed to load the Alekseon_WidgetForms/widget-form template requested by widgetForm-1

--- a/view/frontend/web/template/widget-form.html
+++ b/view/frontend/web/template/widget-form.html
@@ -18,7 +18,7 @@
         <!--/ko-->
 
         <!-- ko if: description -->
-            <div class="field note no-label" data-bind="html: description" />
+        <div class="field note no-label" data-bind="html: description"></div>
         <!--/ko-->
 
         <fieldset class="fieldset" data-bind="html: formFieldsetHtml" />
