--- a/view/frontend/templates/form/field/textarea.phtml
+++ b/view/frontend/templates/form/field/textarea.phtml
@@ -18,7 +18,7 @@
                 maxlength="<?= $block->getMaxLength() ?>"
             <?php endif ?>
             data-validate=<?= $block->getDataValidateJson() ?>
-        ><?=$block->getPlaceholder() ?></textarea>
+        ><?= $block->getDefaultValue() ?></textarea>
     </div>
     <?php if ($note = $block->getNote()): ?>
         <p id="<?= $block->getId() ?>_note" class="note"><?= $note ?></p>
