decreased gap between form and submit button

--- a/view/frontend/web/template/widget-form.html
+++ b/view/frontend/web/template/widget-form.html
@@ -21,7 +21,7 @@
         <div class="field note no-label" data-bind="html: description"></div>
         <!--/ko-->
 
-        <fieldset class="fieldset" data-bind="html: formFieldsetHtml" afterRender="onElementRender"></fieldset>
+        <div data-bind="html: formFieldsetHtml" afterRender="onElementRender"></div>
 
         <!-- ko foreach: elems() -->
         <!-- ko template: getTemplate() --><!-- /ko -->
