rating type input

--- a/view/frontend/web/template/widget-form.html
+++ b/view/frontend/web/template/widget-form.html
@@ -21,12 +21,12 @@
         <div class="field note no-label" data-bind="html: description"></div>
         <!--/ko-->
 
-        <div class="widget-form-fields-container" data-bind="html: formFieldsetHtml" afterRender="onElementRender"></div>
+        <div class="widget-form-fields-container fieldset" data-bind="html: formFieldsetHtml" afterRender="onElementRender"></div>
 
         <!-- ko foreach: elems() -->
         <!-- ko template: getTemplate() --><!-- /ko -->
         <!-- /ko -->
-    </fieldset>
 
-    <div class="actions-toolbar" data-bind="html: actionToolbarHtml" />
+        <div class="actions-toolbar" data-bind="html: actionToolbarHtml" />
+    </fieldset>
 </form>
