--- a/view/frontend/templates/form/action.phtml
+++ b/view/frontend/templates/form/action.phtml
@@ -5,7 +5,7 @@
  */
 ?>
 <div class="primary">
-    <button type="submit" title="<?= __('Submit') ?>" class="action submit primary">
+    <button type="submit" title="<?= $block->getSubmitButtonLabel() ?>" class="action submit primary">
         <span><?= $block->getSubmitButtonLabel() ?></span>
     </button>
 </div>
