--- a/view/frontend/web/template/widget-form.html
+++ b/view/frontend/web/template/widget-form.html
@@ -33,7 +33,7 @@
                 <!--/ko-->
 
             </fieldset>
-            <div class="actions-toolbar" data-bind="html: $parent.actionToolbarHtml">test</div>
+            <div class="actions-toolbar" data-bind="html: tab.actionHtml"></div>
         </div>
     <!-- /ko -->
 
