--- a/view/frontend/templates/form/field/radio_buttons.phtml
+++ b/view/frontend/templates/form/field/radio_buttons.phtml
@@ -12,6 +12,7 @@
             name="<?= $block->getName() ?>"
             id="<?= $block->getId() . '-option-' . $optionId ?>"
             value="<?= $optionId ?>"
+            <?php if ($block->isSelected($optionId)): ?>checked<?php endif ?>
             data-validate=<?= $block->getDataValidateJson() ?>
         >
             <label for="<?= $block->getId() . '-option-' . $optionId ?>"><?= $optionLabel ?></label>
