add radio container css class

--- a/view/frontend/templates/form/field/radio_buttons.phtml
+++ b/view/frontend/templates/form/field/radio_buttons.phtml
@@ -5,7 +5,7 @@
  */
 ?>
 <label class="label" for="<?= $block->getId() ?>"><?= $block->getLabel() ?></label>
-<div class="control">
+<div class="control radio-container">
     <?php foreach ($block->getOptions() as $optionId => $optionLabel): ?>
         <input
             type="radio"
