--- a/view/frontend/templates/form/field/radio_buttons.phtml
+++ b/view/frontend/templates/form/field/radio_buttons.phtml
@@ -3,22 +3,27 @@
  * Copyright © Alekseon sp. z o.o.
  * http://www.alekseon.com/
  */
+
+/**
+ * @var $block \Alekseon\WidgetForms\Block\Form\Field\Multiselect
+ * @var $escaper \Magento\Framework\Escaper
+ */
 ?>
-<label class="label" for="<?= $block->getId() ?>"><?= $block->getLabel() ?></label>
+<label class="label" for="<?= $escaper->escapeHtmlAttr($block->getId()) ?>"><?= $escaper->escapeHtml($block->getLabel()) ?></label>
 <div class="control radio-container">
     <?php foreach ($block->getOptions() as $optionId => $optionLabel): ?>
         <input
             type="radio"
-            name="<?= $block->getName() ?>"
-            id="<?= $block->getId() . '-option-' . $optionId ?>"
-            value="<?= $optionId ?>"
+            name="<?= $escaper->escapeHtmlAttr($block->getName()) ?>"
+            id="<?= $escaper->escapeHtmlAttr($block->getId() . '-option-' . $optionId) ?>"
+            value="<?= $escaper->escapeHtmlAttr($optionId) ?>"
             <?php if ($block->isSelected($optionId)): ?>checked<?php endif ?>
             data-validate=<?= $block->getDataValidateJson() ?>
         >
-            <label for="<?= $block->getId() . '-option-' . $optionId ?>"><?= $optionLabel ?></label>
+            <label for="<?= $escaper->escapeHtmlAttr($block->getId() . '-option-' . $optionId) ?>"><?= $escaper->escapeHtml($optionLabel) ?></label>
         </input>
     <?php endforeach; ?>
 </div>
 <?php if ($note = $block->getNote()): ?>
-    <p id="<?= $block->getId() ?>_note" class="note"><?= $note ?></p>
+    <p id="<?= $escaper->escapeHtmlAttr($block->getId()) ?>_note" class="note"><?= $escaper->escapeHtml($note) ?></p>
 <?php endif ?>
