--- a/view/frontend/templates/form/field/textarea.phtml
+++ b/view/frontend/templates/form/field/textarea.phtml
@@ -3,22 +3,27 @@
  * Copyright © Alekseon sp. z o.o.
  * http://www.alekseon.com/
  */
+
+/**
+ * @var $block \Alekseon\WidgetForms\Block\Form\Field\Textarea
+ * @var $escaper \Magento\Framework\Escaper
+ */
 ?>
-<label class="label" for="<?= $block->getId() ?>"><?= $block->getLabel() ?></label>
+<label class="label" for="<?= $escaper->escapeHtmlAttr($block->getId()) ?>"><?= $escaper->escapeHtml($block->getLabel()) ?></label>
 <div class="control">
     <textarea
-        name="<?= $block->getName() ?>"
-        id="<?= $block->getId() ?>"
-        title="<?= $block->getLabel() ?>"
+        name="<?= $escaper->escapeHtmlAttr($block->getName()) ?>"
+        id="<?= $escaper->escapeHtmlAttr($block->getId()) ?>"
+        title="<?= $escaper->escapeHtmlAttr($block->getLabel()) ?>"
         cols="5"
         rows="3"
-        class="<?= $block->getValidationClass() ?>"
+        class="<?= $escaper->escapeHtmlAttr($block->getValidationClass()) ?>"
         <?php if ($block->getMaxLength()): ?>
-            maxlength="<?= $block->getMaxLength() ?>"
+            maxlength="<?= $escaper->escapeHtmlAttr($block->getMaxLength()) ?>"
         <?php endif ?>
         data-validate=<?= $block->getDataValidateJson() ?>
-    ><?= $block->getDefaultValue() ?></textarea>
+    ><?= $escaper->escapeHtml($block->getDefaultValue()) ?></textarea>
 </div>
 <?php if ($note = $block->getNote()): ?>
-    <p id="<?= $block->getId() ?>_note" class="note"><?= $note ?></p>
+    <p id="<?= $escaper->escapeHtmlAttr($block->getId()) ?>_note" class="note"><?= $escaper->escapeHtml($note) ?></p>
 <?php endif ?>
