--- a/view/frontend/templates/form/additional_info.phtml
+++ b/view/frontend/templates/form/additional_info.phtml
@@ -3,5 +3,7 @@
  * Copyright © Alekseon sp. z o.o.
  * http://www.alekseon.com/
  */
+
+/** @var \Alekseon\WidgetForms\Block\Form\AdditionalInfo $block */
 ?>
 <?= $block->getChildHtml() ?>
