--- a/view/frontend/templates/form/tab.phtml
+++ b/view/frontend/templates/form/tab.phtml
@@ -9,7 +9,7 @@
  *  @var $escaper \Magento\Framework\Escaper
  */
 ?>
-<fieldset class="fieldset form-tab-<?= $block->getTab()->getTabSequenceNumber() ?>" <?php if (!$block->getTab()->getIsFirstTab()): ?>style="display: none"<?php endif ?>>
+<fieldset class="fieldset <?= $escaper->escapeHtmlAttr($block->getClass()) ?>" <?php if (!$block->getTab()->getIsFirstTab()): ?>style="display: none"<?php endif ?>>
     <?php if ($block->getParentBlock()->getFormTitle()): ?>
         <legend class="legend"><?= $escaper->escapeHtmlAttr($block->getParentBlock()->getFormTitle()) ?></legend>
     <?php endif ?>
