--- a/view/frontend/templates/widget_form.phtml
+++ b/view/frontend/templates/widget_form.phtml
@@ -10,7 +10,7 @@
  */
 ?>
 <?php if ($block->getForm()): ?>
-    <div class="alekseon-widget-form-wrapper <?= $block->getFormWrapperClass() ?>" id="widget-form-wrapper-<?= $escaper->escapeHtmlAttr($block->getForm()->getId()) ?>">
+    <div class="alekseon-widget-form-wrapper <?= $escaper->escapeHtmlAttr($block->getFormWrapperClass()) ?>" id="widget-form-wrapper-<?= $escaper->escapeHtmlAttr($block->getForm()->getId()) ?>">
         <form id="custom_form_<?= $block->getForm()->getId() ?>" data-mage-init='{"validation":{}}' autocomplete="off">
             <input type="hidden" name="hideit" id="hideit" />
             <input type="hidden" name="form_key" id="form_key" value="<?= $block->getFormKey()?>" />
