--- a/view/frontend/templates/widget_form.phtml
+++ b/view/frontend/templates/widget_form.phtml
@@ -11,21 +11,23 @@
 ?>
 <?php if ($block->getForm()): ?>
     <div class="alekseon-widget-form-wrapper <?= $escaper->escapeHtmlAttr($block->getFormWrapperClass()) ?>" id="widget-form-wrapper-<?= $escaper->escapeHtmlAttr($block->getForm()->getId()) ?>">
-        <form id="custom_form_<?= $block->getForm()->getId() ?>" data-mage-init='{"validation":{}}' autocomplete="off">
+        <form id="alekseon-widget-form-<?= $block->getForm()->getId() ?>" data-mage-init='{"validation":{}}' autocomplete="off">
             <input type="hidden" name="hideit" id="hideit" />
             <input type="hidden" name="form_key" id="form_key" value="<?= $block->getFormKey()?>" />
             <?= $this->getChildHtml() ?>
         </form>
     </div>
-    <script type="text/x-magento-init">
-    {
-        "*": {
-            "Alekseon_WidgetForms/js/widget-form": {
-                "formId": "custom_form_<?= $block->getForm()->getId() ?>",
+
+    <script type="text/javascript">
+        require([
+            "Alekseon_WidgetForms/js/widget-form"
+        ],function(widgetForm) {
+            var options = {
+                "formId": "alekseon-widget-form-<?= $block->getForm()->getId() ?>",
                 "formSubmitUrl": "<?= $block->getUrl('Alekseon_WidgetForms/form/submit', ['form_id' => $block->getForm()->getId()]) ?>",
                 "tabs": <?= $block->getTabsJson() ?>
-            }
-        }
-    }
+            };
+            widgetForm(options);
+        });
     </script>
 <?php endif ?>
